src/parser/test/parser-tests-gen/data/good/good-3.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed2|object
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type2:
    type: object|Seed1
    example: {}
  Type3:
    type: Seed1|object
    example: |
      {
        "str1": "str",
        "num1": 1
      }
  Type4:
    type: object|object
    example: {}
  Type5:
    type: [Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type5_bool_1": true,
        "type5_prop_1": {}
      }
    properties:
      type5_prop_1:
        type: object
      type5_bool_1:
        type: boolean
  Type6:
    type: object|object
    example: {}
  Type7:
    type: [Seed3,Type5]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type5_bool_1": true,
        "type5_prop_1": {},
        "type7_prop_2": {},
        "type7_prop_1": {}
      }
    properties:
      type7_prop_1:
        type: Type6|(Type4)
      type7_prop_2:
        type: object
  Type8:
    type: object
    example: |
      {
        "type8_num_1": 1,
        "type8_prop_1": {}
      }
    properties:
      type8_prop_1:
        type: object
      type8_num_1:
        type: number
  Type9:
    type: object|Type5
    example: {}
  Type10:
    type: [Seed3,Type7]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type5_bool_1": true,
        "type5_prop_1": {},
        "type7_prop_2": {},
        "type7_prop_1": {},
        "type10_prop_1": {},
        "type10_bool_1": true
      }
    properties:
      type10_bool_1:
        type: boolean
      type10_prop_1:
        type: object

/res1:
  post:
    body:
      application/json:
        type: object|object
        example: {}
/res2:
  post:
    body:
      application/json:
        type: Type6
        example: {}
/res3:
  post:
    body:
      application/json:
        type: [Type8,Type9]
        example: |
          {
            "type8_prop_1": {},
            "type8_num_1": 1
          }
/res4:
  post:
    body:
      application/json:
        type: Seed3|object
        example: |
          {
            "str3": "str",
            "num3": 1
          }
/res5:
  post:
    body:
      application/json:
        type: [Seed3]
        example: |
          {
            "str3": "str",
            "num3": 1
          }
