src/parser/test/parser-tests-gen/data/bad/bad-82.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed2|object
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type2:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type2_prop_1": {},
        "type2_bool_1": true
      }
    properties:
      type2_bool_1:
        type: boolean
      type2_prop_1:
        type: (((number)|(Seed2))|string)
  Type3:
    type: Type2|object
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type2_prop_1": {},
        "type2_bool_1": true
      }
  Type4:
    type: object|Seed2
    example: {}
  Type5:
    type: [Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type5_prop_1": "str",
        "type5_str_1": "str"
      }
    properties:
      type5_str_1:
        type: string
      type5_prop_1:
        type: (Type2)
  Type6:
    type: object|Seed41
    example: {}
  Type7:
    type: object
    example: |
      {
        "type7_bool_1": true,
        "type7_num_1": 1
      }
    properties:
      type7_num_1:
        type: number
      type7_bool_1:
        type: boolean
  Type8:
    type: [Type2]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type2_prop_1": {},
        "type2_bool_1": true,
        "type8_prop_1": {},
        "type8_bool_1": true
      }
    properties:
      type8_bool_1:
        type: boolean
      type8_prop_1:
        type: object
  Type9:
    type: object|object
    example: {}
  Type10:
    type: [Seed2,Seed41]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type10_prop_1": {},
        "type10_bool_1": true
      }
    properties:
      type10_bool_1:
        type: boolean
      type10_prop_1:
        type: Seed3|(Type7|(number|string))

/res1:
  post:
    body:
      application/json:
        type: [Type6,Type8]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type2_bool_1": true,
            "type2_prop_1": {},
            "type8_bool_1": true,
            "type8_prop_1": {}
          }
/res2:
  post:
    body:
      application/json:
        type: [Type3]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type2_bool_1": true,
            "type2_prop_1": {}
          }
/res3:
  post:
    body:
      application/json:
        type: object|Type10
        example: {}
/res4:
  post:
    body:
      application/json:
        type: object
        example: {}
/res5:
  post:
    body:
      application/json:
        type: object
        example: {}
